sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: not found: value getnombreValeurs
	for(k <- 0 to getnombreValeurs()-n){
                      ^