sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
for(n <- 2 to getNombreValeurs()){
	for(k <- 0 to getnombreValeurs()-n){
			if(plusPetit(k+1,k)){
				echange(k,k+1)
				
			}
		}
		for(i <- getNombreValeurs()-n to 0 by -1 ){
			if(plusPetit(i+1,i)){
				echange(i,i+1)
				
			}
		}
}	
}
